force-app/main/default/objects/Localidad__c/Localidad__c.object-meta.xml
<CustomObject>
    <label>Localidad</label>
    <nameField>
        <label>Nombre de Localidad</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Localidades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>