force-app/main/default/objects/Localidad__c/fields/Descripcion_Localidad__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Localidad__c</fullName>
    <label>Descripcion_Localidad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>