force-app/main/default/objects/Localidad__c/fields/Descripcion_SalesGroup__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_SalesGroup__c</fullName>
    <label>Descripcion_SalesGroup</label>
    <length>50</length>
    <type>Text</type>
</CustomField>