force-app/main/default/objects/Localidad__c/fields/Descripcion_SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_SalesOffice__c</fullName>
    <label>Descripcion_SalesOffice</label>
    <length>50</length>
    <type>Text</type>
</CustomField>