force-app/main/default/objects/Localidad__c/fields/Provincia__c.field-meta.xml
<CustomField>
    <fullName>Provincia__c</fullName>
    <formula>TEXT(Municipio__r.Descripcion_Provincia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provincia</label>
    <type>Text</type>
</CustomField>