force-app/main/default/objects/Localidad__c/fields/SalesGroup__c.field-meta.xml
<CustomField>
    <fullName>SalesGroup__c</fullName>
    <label>SalesGroup</label>
    <length>50</length>
    <type>Text</type>
</CustomField>