force-app/main/default/objects/Localidad__c/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <label>SalesOffice</label>
    <length>50</length>
    <type>Text</type>
</CustomField>