force-app/main/default/objects/Localidad__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Municipio__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Provincia__c</field>
        <operation>equals</operation>
    </filters>
    <label>Todos</label>
</ListView>